<resources>
    <string name="app_name">Super Chef</string>
    <string name="textbio">Help you to cook healthy food</string>
    <string name="title">Super Chef</string>
    <string name="regbtntext">REGISTER</string>
    <string name="signintext">SIGN IN</string>
    <string name="continuetext">Continue as guest? Skip</string>
    <string name="remembertext">Remember</string>
    <string name="Passwordtext">Password</string>
    <string name="emailtext">Email</string>
    <string name="ForgotPassword">Forgot password?</string>
    <string name="email">Email ID</string>
    <string name="create">CREATE ACCOUNT</string>
    <string name="pass">Password</string>
    <string name="repass">Re-enter Password</string>
    <string name="signup">Signup</string>
    <string name="cancel">CANCEL</string>
    <string name="send">Send Password</string>
    <string name="forgot">FORGOT PASSWORD</string>
    <string name="mying">You have 0 Ingredients</string>
    <string name="heading">My Ingredients</string>
    <string name="title_pantry">Pantry</string>
    <string name="title_Menu">Menu</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_shoppinglist">Shopping list</string>
    <string name="search_text">Add/remove/paste ingredients</string>
    <string name="searchtext">Add/remove/paste ingredients</string>
    <string name="see_recipe">See Recipe</string>
    <string name="my_pantry">My Pantry </string>
    <string name="zero"> 0</string>
    <string name="remove">Remove all ingredients</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addmore">+ Add more</string>
    <string name="heading1">My Pantry</string>
    <string name="add">Add Ingredients</string>
    <string name="empty_list">The shopping list is empty</string>
    <string name="inmylist">What\'s in my list</string>
    <string name="got">What I got</string>
    <string name="completed">Clear Completed</string>
    <string name="all">Clear All</string>
    <string name="name">Name</string>
    <string name="Logout">Logout</string>
    <string name="save">Save</string>
    <string name="change">Change Profile</string>
    <string name="yourname">Your Name</string>
    <string name="youremail">Your Email</string>
    <string name="signup1">Sign Up</string>
</resources>