<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/loginbg"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:background="@drawable/transparentback"
        android:paddingHorizontal="15dp"
        android:layout_marginHorizontal="25dp"
        android:paddingVertical="40dp"
        >

        <TextView
            android:id="@+id/titletv"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:fontFamily="cursive"
            android:paddingHorizontal="20dp"
            android:text="@string/create"
            android:textColor="#ffff"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_baseline_email"
            android:paddingStart="5dp"
            android:background="@drawable/capsuleshapedbutton"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/black"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/ic_baseline_pass_key"
                android:paddingStart="5dp"
                android:background="@drawable/capsuleshapedbutton"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/black"
                android:hint="@string/pass"
                android:textColor="@color/black"
                android:inputType="textPassword" />

            <ImageView
                android:id="@+id/eyeimg1"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_baseline_visibility_24"
                app:tint="@color/black" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:maxLength="11"
                android:id="@+id/repassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_baseline_pass_key"
                android:paddingStart="5dp"
                android:background="@drawable/capsuleshapedbutton"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/black"
                android:hint="@string/repass"

                android:inputType="textPassword" />

            <ImageView
                android:id="@+id/eyeimg2"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_baseline_visibility_24"
                app:tint="@color/black" />

        </RelativeLayout>

        <Button
            android:id="@+id/registerbtn"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/capsuleshapedbutton"
            />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/capsuleshapedbutton"
            android:backgroundTint="@color/teal_200"
            android:text="@string/cancel" />

    </LinearLayout>
</RelativeLayout>