<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:background="@drawable/loginbg">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="40dp"
        android:paddingHorizontal="15dp"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical"
        android:background="@drawable/transparentback"
        android:layout_centerInParent="true">
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="20dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="3">
            <TextView
                android:textSize="20sp"
                android:text="@string/name"
                android:textColor="#FF03DAC5"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/ic_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:layout_marginEnd="20dp"
                app:drawableTint="#FF03DAC5" />
            <TextView
                android:textSize="20sp"
                android:text="@string/yourname"
                android:textColor="#FF03DAC5"
                android:layout_width="wrap_content"
                android:layout_marginStart="30dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:id="@+id/yourname"
                android:layout_marginEnd="20dp"
                app:drawableTint="#FF03DAC5" />
            <TextView
                android:drawablePadding="5dp"
                android:textSize="20sp"
                android:text="@string/email"
                android:textColor="#FF03DAC5"
                android:drawableLeft="@drawable/ic_baseline_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:layout_marginEnd="20dp"
                app:drawableTint="#FF03DAC5"/>
            <TextView
                android:textSize="20sp"
                android:text="@string/youremail"
                android:textColor="#FF03DAC5"
                android:layout_width="wrap_content"
                android:layout_marginStart="30dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:id="@+id/youremail"
                android:layout_marginEnd="20dp"
                app:drawableTint="#FF03DAC5" />

        </LinearLayout>
         <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:layout_marginTop="40dp"
             >
             <Button
                 android:backgroundTint="#FF8C00"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/logout"
                 android:text="@string/Logout"
                 android:layout_gravity="center"
                 android:textColor="@color/black"
                 android:background="@drawable/profilebutton"/>
<!--             <Button-->
<!--                 android:layout_width="wrap_content"-->
<!--                 android:layout_height="wrap_content"-->
<!--                 android:id="@+id/change"-->
<!--                 android:layout_weight="1"-->
<!--                 android:text="@string/change"-->
<!--                 android:textColor="@color/black"-->
<!--                 android:background="@drawable/profilebutton"/>-->
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>