<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:background="@drawable/loginbg">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="40dp"
        android:paddingHorizontal="15dp"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical"
        android:background="@drawable/transparentback"
        android:layout_centerInParent="true">
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="20dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
<!--            <TextView-->
<!--                android:textSize="20sp"-->
<!--                android:text="@string/name"-->
<!--                android:textColor="#FF03DAC5"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:id="@+id/name"-->
<!--                android:layout_marginEnd="20dp"-->
<!--                android:layout_weight="2"/>-->
            <EditText
                android:textAlignment="center"
                android:background="@drawable/capsuleshapedbutton"
                android:backgroundTint="@color/white"
                android:hint="@string/email"
                android:textColorHint="@color/black"
                android:layout_marginStart="15dp"
                android:id="@+id/emailtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginBottom="10dp"
                />
            <EditText
                android:textAlignment="center"
                android:background="@drawable/capsuleshapedbutton"
                android:backgroundTint="@color/white"
                android:hint="@string/name"
                android:textColorHint="@color/black"
                android:layout_marginStart="15dp"
                android:id="@+id/nametext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                />
        </LinearLayout>
         <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
             android:layout_marginTop="40dp"
             android:weightSum="2"
             >
             <Button
                 android:backgroundTint="#FF8C00"
                 android:layout_marginEnd="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/logout"
                 android:text="@string/Logout"
                 android:textColor="@color/black"
                 android:layout_weight="1"
                 android:background="@drawable/profilebutton"/>
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/save"
                 android:layout_weight="1"
                 android:text="@string/save"
                 android:textColor="@color/black"
                 android:background="@drawable/profilebutton"/>
        </LinearLayout>
<!--        <LinearLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal">-->
<!--            <TextView-->
<!--            android:text="@string/email"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/email"-->
<!--            android:layout_gravity="center"-->
<!--            />-->
<!--        </LinearLayout>-->
    </LinearLayout>

</RelativeLayout>